[STF] 1. move the package sarosSWTBot to the package server. 2. Rename the class InitTester to ConfigTester and remove it to the package testsuits, because only the classes under testsuits use configTester to initiate testers 3. All the init-methods and configurationsinfos for a Tester would be defined in the class ConfigTester, so remove the redundant class"TesterConfigurationInfos" 4. put the class STFTest from package helpers to package testsuits, because STFTest is the superclass of all junittests. 5. define a package "sarosViewComponents" and put all *viewCompent of Saros into the new package.